@@ -1,5 +1,11 @@
 2012-01-31  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/fs/fat.c (grub_fat_dir_entry) [MODE_EXFAT]: Expand label
+	to 15 UTF-16 characters as seen in FS generated by mkexfatfs.
+	(grub_fat_label) [MODE_EXFAT]: Use macros for size.
+
+2012-01-31  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/fs/romfs.c (grub_romfs_mount): Fix a bug with labels going
 	over the sector.
 
